# fast-notice

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
app/api/: deps.py  main.py
app/api/endpoints/: tasks.py  tests.py  users.py
app/api/routes/: login.py  tests.py  users.py
app/core/: config.py  db.py  errors.py  exceptions.py  resp.py  security.py  snowflake.py  utils.py
app/crud/: users.py
app/models/: __init__.py  base.py  jwt.py  user.py
app/schemas/: user.py
