[tool.poetry]
name = "fast-notice"
version = "0.1.0"
description = ""
authors = ["rainerosion <rainerosion@gmail.com>"]
license = "Mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = ">2.0"
pydantic-settings = "^2.2.1"
alembic = "^1.12.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "4.0.1"
psycopg2 = "^2.9.9"
snowflake-id = "^1.0.1"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
